@@ -1,5 +1,9 @@
 package tech.maslick.s3test;
 
+import software.amazon.awssdk.auth.signer.AwsS3V4Signer;
+import software.amazon.awssdk.auth.signer.params.Aws4PresignerParams;
+import software.amazon.awssdk.http.SdkHttpFullRequest;
+import software.amazon.awssdk.http.SdkHttpMethod;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.s3.S3Client;
 import software.amazon.awssdk.services.s3.model.GetObjectRequest;
@@ -9,7 +13,8 @@ import software.amazon.awssdk.services.s3.model.PutObjectResponse;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.time.Instant;
 
 
 public class Test {
@@ -25,6 +30,17 @@ public class Test {
         System.out.println("########################################");
         fetchFile("my-lovely-bucket", "helloworld.txt");
         putFile("my-lovely-bucket", "helloworld.txt");
+
+        System.out.println("########################################");
+        System.out.println("# signed URL for GET");
+        String url = createSignedUrl2Fetch("my-lovely-bucket", "helloworld.txt");
+        System.out.println(url);
+
+        System.out.println("########################################");
+        System.out.println("# signed URL for PUT");
+        url = createSignedUrl2Put("my-lovely-bucket", "helloworld.txt");
+        System.out.println(url);
+        System.out.println("########################################");
     }
 
     public static void fetchFile(String bucket, String key) throws IOException {
@@ -56,10 +72,48 @@ public class Test {
                     .bucket(bucket)
                     .key(key)
                     .build(),
-                Path.of("helloworld.txt")
+                Paths.get("helloworld.txt")
         );
 
         System.out.println("Success: " + response.sdkHttpResponse().isSuccessful());
+    }
+
+    public static String createSignedUrl2Fetch(String bucket, String key) {
+        Aws4PresignerParams params = Aws4PresignerParams.builder()
+                .signingName("s3")
+                .signingRegion(Region.EU_WEST_1)
+                .awsCredentials(CredsProviders.envVarsCredsProvider().resolveCredentials())
+                .expirationTime(Instant.ofEpochMilli(System.currentTimeMillis() + 60*1000*5))
+                .build();
+
+        SdkHttpFullRequest request = SdkHttpFullRequest.builder()
+                .host(bucket + ".s3.amazonaws.com")
+                .encodedPath(key)
+                .method(SdkHttpMethod.GET)
+                .protocol("https")
+                .build();
+
+        SdkHttpFullRequest result = AwsS3V4Signer.create().presign(request, params);
+        return result.getUri().toString();
+    }
+
+    public static String createSignedUrl2Put(String bucket, String key) {
+        Aws4PresignerParams params = Aws4PresignerParams.builder()
+                .signingName("s3")
+                .signingRegion(Region.EU_WEST_1)
+                .awsCredentials(CredsProviders.envVarsCredsProvider().resolveCredentials())
+                .expirationTime(Instant.ofEpochMilli(System.currentTimeMillis() + 60*1000*5))
+                .build();
+
+        SdkHttpFullRequest request = SdkHttpFullRequest.builder()
+                .host(bucket + ".s3.amazonaws.com")
+                .encodedPath(key)
+                .method(SdkHttpMethod.PUT)
+                .protocol("https")
+                .build();
+
+        SdkHttpFullRequest result = AwsS3V4Signer.create().presign(request, params);
+        return result.getUri().toString();
     }
 }
 
